--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-DEBUG=True
 SECRET_KEY=unsafe-secret-key
-
+DEBUG=False
 RAILWAY_PUBLIC_DOMAIN=gproject-production.up.railway.app
 
 EMAIL_HOST_USER=vy9919855322@gmail.com
